--- a/templates/sign-in.html
+++ b/templates/sign-in.html
@@ -262,7 +262,7 @@ function onSignInCallback(authResult) {
   <!-- BEGIN FOOTER -->
   <div class="footer">
     <div class="footer-inner">
-      2013 &copy; i/oGrow.
+      &copy; i/oGrow  2013 - 2014
     </div>
    
   </div>
