--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -99,7 +99,7 @@
   <!-- BEGIN FOOTER -->
   <div class="footer">
     <div class="footer-inner">
-      2013 &copy; i/oGrow.
+     &copy; i/oGrow  2013 - 2014
     </div>
    
   </div>
