--- a/templates/accounts/note_show.html
+++ b/templates/accounts/note_show.html
@@ -1,25 +1,15 @@
-<div class="page-sidebar nav-collapse collapse">
-      <!-- BEGIN SIDEBAR MENU -->        
-      <ul class="page-sidebar-menu">
-        {% for tab in tabs %}
-           <li id="id_{{tab.name}}"><a href="{{ tab.url }}"><i class="icon-cogs"></i><span class="title"> {{tab.label}}</span></a></li>
-          {% endfor %}
-
-      </ul>   
-      <!-- END SIDEBAR MENU -->
-</div>
 <div  class="page-content">
-<div class="container-fluid" ng-show="immediateFailed">
-         <div class="span12">  
-          <h1>{{ _("Sign-in Button;") }}</h1>
+<div class="" ng-show="immediateFailed">
+         <div class="col-md-12">  
+          <h1>Sign-in Button;</h1>
               <span id="signin">
                   <span id="myGsignin"></span>
               </span>
         </div>
- </div>
-    <div class="container-fluid" >
-      <div class="row-fluid">
-         <div class="span12">
+  </div>
+
+      <div class="row">
+         <div class="col-md-12">
          
             <!--div class="pull-right sharebuttonDiv"> 
                   <a href="" class="<btn blue jfk-button jfk-button-action">
@@ -33,10 +23,11 @@
           <hr>
       </div>
     </div>
-      <!--HKA 19.11.2013 Begin  row-fluid-2 who is involved -->
-    <div class="row-fluid">
+      <!--HKA 19.11.2013 Begin  row-2 who is involved -->
+    <div class="row">
     <!--HKA 19.11.2013 BEGIN Span comments-->
-      <div class="span8">
+    <div class="col-md-12">
+      <div class="col-md-8">
       <!-- BEGIN PORTLET-->
         <div class="portlet">
           <div class="portlet-title line">
@@ -64,12 +55,14 @@
          
         </div>
       <!-- End Portlet -->
-      <div class="row-fluid">
-                  <div class="span12 margin-bottom-10">
+      <div class="row">
+      
+                  <div class="col-md-12 margin-bottom-10">
                  <p class⁼"lead"=""><strong>{{ _("Just add comments to remember what's important :") }}</strong> </p>
                           <form id="addComment" ng-submit="addComment(comment)" class="ng-pristine ng-valid">
-                                            <textarea id="noteBody" class="input-block-level ng-pristine ng-valid" rows="3" ng-model="comment.content"></textarea>
-
+                                        <div class="form-group">  
+                                            <textarea id="noteBody" class="form-control ng-pristine ng-valid" rows="3" ng-model="comment.content"></textarea>
+                                        </div>
                                          <div class="pull-right">
                                         
                                           <input ng-hide="isLoading" type="submit" class="btn green" value="Add comment">
@@ -77,8 +70,8 @@
                                           </div>
                       </form>
                       </div>
-              
-        </div>
+        </div>      
+        
       <ul class="chats">
                   <li class="in" ng-repeat="comment in comments" id="comment_<%=$index%>">
                     <img class="avatar" alt="" ng-src="<%=comment.author.photo%>" />
@@ -93,22 +86,22 @@
                   </li>
                   
         </ul>
-        <div class="row-fluid">
+        <div class="row">
+        <div class="col-md-12">
                                 <div class="pagination pull-right" ng-hide="isLoading">
                                       
-                                      <ul>
-                                        <li ng-show="paginationcomment.prev"><button ng-click="listPrevPageItemscomment()" id="sample_editable_1_new" class="btn">
+                                    <button ng-click="listPrevPageItemscomment()" id="sample_editable_1_new" class="btn" 
+                                       ng-show="paginationcomment.prev">
                                         {{_("Prev")}} 
-                                        </button></li>
-                                        
-                                        <li  ng-show="paginationcomment.next"><button ng-click="listNextPageItemscomment()"  class="btn">
+                                        </button >
+                                        <button ng-click="listNextPageItemscomment()"  class="btn" ng-show="paginationcomment.next">
                                         {{_("Next")}} 
-                                        </button></li>
-                                      </ul>
+                                        </button>
+                                    
                                     </div>
                                     <h3 class="pagination pull-right" ng-show="isLoading">Loading...</h3>
-                              </div>
-
+        </div>
+        </div>
         
       </div>
     <!--HKA 19.11.2013 END Span comments-->
@@ -116,7 +109,7 @@
 
 
   <!--HKA 19.11.2013 BEGIN Span who is involved -->
-      <div class="span4">
+      <div class="col-md-4">
         <div class="portlet">
                 <div class="portlet-title line">
                   <div class="caption"><i class="icon-tasks"></i>{{ _("Who's involved") }}</div>
@@ -139,6 +132,7 @@
                 </div>
                 
        </div>
+    </div>
                <!--HKA 03.12.2013 Add new Contributors -->
          <div id="addContributor" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
               <div class="modal-header">
@@ -151,7 +145,7 @@
                   
                     <p>{{ _("Invite people from your team and start working together on this task. Everyone you invite will receive an email.") }}</p>
 
-                    <div class='container-fluid'>
+                    <div>
                     <div class="invitation" ng-show="slected_memeber">
                       <img class="google-avatar" src="<%= slected_memeber.google_public_profile_photo_url%>"/>
                         <strong> <%= slected_memeber.google_display_name %> < <%=slected_memeber.email%> ></strong>
