--- a/templates/contacts/show.html
+++ b/templates/contacts/show.html
@@ -258,7 +258,7 @@
                                  
                                 </div>
                                   <ul class="list-unstyled contact-infos">
-                                    <li ng-repeat="phone in infonodes.phones"> <%=phone.number%> - <%=phone.type%> <a ><img class="ctodeal" src="static/img/phone-icon.png" /></a></li>
+                                    <li ng-repeat="phone in infonodes.phones"> <%=phone.number%> - <%=phone.type%> <a ><img class="ctodeal"  /></a></li>
           
                                     <li><a href="#phonemodal"  class="btn-link addAnotherPhone" data-toggle="modal"><i class="icon-plus"></i>Add a new Phone</a></li>
 
@@ -1128,8 +1128,12 @@
                     <div class="form-group">
                         <label  class="col-md-3 control-label">{{_("Custom Field")}} </label>
                         <div class="col-md-9">
-                          <input type="text" class="form-control" placeholder="Field"  ng-model="customField.field">
-                          <input type="text" class="form-control" placeholder="Value"  ng-model="customField.value">
+                        <div class="form-group">
+                             <input type="text" class="form-control" placeholder="Field"  ng-model="customField.field">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Value"  ng-model="customField.value">
+                        </div>
                         </div>
                      </div>
               </div>
