--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -69,7 +69,7 @@
                     </div>
                       <div class="modal-footer">
                         <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
-                        <input ng-hide="isLoading" ng-click="testTags()" type="submit" class="btn green" value="Add">
+                        <input ng-hide="isLoading" ng-click="addTags()" type="submit" class="btn green" value="Add">
                         <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
                       </div>
                   </form>
@@ -195,14 +195,15 @@
           
           <div class="col-md-12">
             <h2 class="page-title">{{ _("Tasks") }} </h2>
-            
-            <div class="btn-group">
-            
-                    <button  ng-click="showModal()" id="sample_editable_1_new" class="btn red">
-                    {{ _("New Task") }} <i class="icon-plus"></i>
-                    </button>
+            <div class="row">
+              <div class="col-md-12">
+                <form>
+                  <input class="form-control" type="text" placeholder="Add new task"/>
+                </form>
+                <br>
+              </div>
             </div>
-            
+
                
             <hr/>
             
@@ -211,100 +212,96 @@
           <!-- Filtering and sorting -->
           <div class="row">
           <div class="col-md-9">
-            <div class="row filter-row"  >
-              <div class="col-md-2">
-                 <div class="form-group">
-                      <div>
-                        <select ng-model="status" ng-change="filterByStatus()" class="form-control select_status">
-                          <option value="closed" >Closed</option>
-                          <option value="pending">Open</option>
-                        </select>
+              <!-- BEGIN PORTLET-->
+              <div id="account-tab" class="portlet paddingless">
+                <div class="portlet-body">
+                  <div class="tabbable tabbable-custom">
+                  <ul class="nav nav-tabs">
+                      <li class="ng-tab" ng-class="{active: selectedTab == 1}"><a ng-click="selectedTab = 1;renderMaps();">{{ _("All Tasks") }}</a></li>
+                      <li class="ng-tab" ng-class="{active: selectedTab == 2}"><a ng-click="selectedTab = 2;" >{{ _("Urgent Tasks") }}</a></li>
+                      <li class="ng-tab" ng-class="{active: selectedTab == 3}"><a ng-click="selectedTab = 3;">{{ _("Created by Me") }}</a></li>
+                      <li class="ng-tab" ng-class="{active: selectedTab == 4}"><a ng-click="selectedTab = 4;">{{ _("Assigned to Me") }}</a></li>
+                      <li class="ng-tab"  ng-class="{active: selectedTab == 5}"><a ng-click="selectedTab = 5;">{{ _("Private Tasks") }}</a></li>
+                  </ul>
+                  <div class="tab-content">
+                      <div class="tab-pane active " id="tab_1_1" ng-show="selectedTab == 1">
+                          <div class="row tasksList">
+                            <div class="col-md-12">
+                                <ul class="list-group">
+                                    <li class="task-actions list-group-item task-actions">
+                                     <div class="row">
+                                     <div class="col-md-12">
+                                       <form id="task_actions" class="form-inline" role="form">
+                                       <div class="row">
+                                       <label class="col-md-1 col-sm-1">
+                                           <input type="checkbox" ng-checked="isSelectedAll" ng-click="select_all_tasks($event)">  
+                                       </label>
+                                       <div class="col-md-7">
+                                        <button  ng-show="status=='pending'" class="btn btn-sm btn-default task_action" ng-click="beforecloseTask()" ng-class="{disabled: selected_tasks.length==0}">
+                                        <i class="fa fa-lock"></i>
+                                        Close</button>
+                                         <button  ng-show="status=='closed'" class="btn btn-sm btn-default task_action" ng-click="reopenTask()" ng-class="{disabled: selected_tasks.length==0}">
+                                        <i class="fa fa-unlock"></i>
+                                        Reopen</button>
+                                        <button ng-click="showAssigneeTags()" class="btn btn-sm btn-default task_action" ng-class="{disabled: selected_tasks.length==0}">
+                                        <i class="fa fa-tags"></i>
+                                        Tags
+                                        </button>
+                                        <button ng-click="assigneeModal()" class="btn btn-sm btn-default task_action" ng-class="{disabled: selected_tasks.length==0}">
+                                        <i class="fa fa-mail-forward"></i>
+                                        Assignee</button>
+                                        </div>
+                                      </form>
+                                        </div>
+                                    </div>
+                                  </li>
+                                   <li ng-repeat="task in tasks" class="list-group-item">
+                                     <div class="row">
+                                        <label class="col-md-1 col-sm-1">
+                                            <input type="checkbox" ng-click="select_task(task,$index,$event)" ng-checked="isSelected()">  
+                                        </label>
+                                       <h4 ng-dblclick="edit_task(task)" ng-show="edited_task!=task" class="col-md-6 col-sm-7 list-group-item-heading"
+                                       ng-class= "{task_closed: task.status=='closed'}">
+                                       <i class="fa fa-dot-circle-o status_color"></i>
+                                        <%= task.title %>
+                                       </h4>
+                                       <div ng-show="edited_task==task" class="col-md-6 col-sm-7">
+                                       <form ng-submit="done_edit_task(task)">
+                                          <input ng-type="text" class="form-control inlineEditTask" ng-blur="done_edit_task(task)" ng-model="task.title">
+                                       </form>
+                                         
+                                       </div>
+                                        <div class="col-md-5 col-sm-4">
+                                            <span ng-repeat="task_tag in task.tags" class="pull-right task-label badge badge-roundless" style="background-color: <%=task_tag.color%>;color:<%=idealTextColor(task_tag.color)%>;">
+                                                <%= task_tag.name %>
+                                            </span>
+                                        </div>
+                                    </div>
+                                     <div class="row">
+                                      <p class="col-md-11 col-md-offset-1 list-group-item-text">
+                                         <span>Opened by:<a href="#"> <%= task.author.display_name %></a></span>
+                                         <!--<span>Closed by:<a href="#">Transline</a></span>-->
+                                      </p>
+                                      </div>
+                                  </li>
+                                </ul>
+                              </div><!-- / col-md-12-->
+                          </div> <!-- / tasksList-->
                       </div>
+                       <div class="tab-pane active" id="tab_1_2" ng-show="selectedTab == 2">
+                      </div>
+                       <div class="tab-pane active" id="tab_1_3" ng-show="selectedTab == 3">
+                      </div>
+                       <div class="tab-pane active" id="tab_1_4" ng-show="selectedTab == 4">
+                      </div>
+                       <div class="tab-pane active" id="tab_1_5" ng-show="selectedTab == 5">
+                      </div>
+                       <div class="tab-pane active" id="tab_1_6" ng-show="selectedTab == 6">
+                      </div>
+                  </div>
+                </div>
                 </div>
               </div>
-              <div class="col-md-5">
-                 
-                  <form class=" ng-pristine ng-valid" ng-submit="executeSearch(searchQuery)">
-                    <div class="input-group">
-                      <input type="text" ng-model="searchQuery" typeahead="result as result.name  for result in results | filter:$viewValue | limitTo:8" typeahead-on-select="selectResult()" class="form-control" placeholder="{{ _('Quick Filtering') }}">
-                      <span class="input-group-btn">
-                        <button class="gbqfb gbqfb-hvr" type="button"><i class="icon-filter"></i></button>
-                      </span>
-                    </div>
-                   
-                  </form>
-                   
-              </div>
-              <div class="col-md-2">
-                <div class="btn-group btn-sort">
-                      <a class="btn btn-default" href="#" data-toggle="dropdown">
-                      {{ _('Sort by') }}
-                      <i class="icon-angle-down"></i>
-                      </a>
-                      <ul class="dropdown-menu">
-
-                         <li><a ng-click="orderBy('-created_at')" href="#" data-toggle="modal">{{ _('Newest') }}</a></li>
-                          <li><a ng-click="orderBy('created_at')" href="#" data-toggle="modal">{{ _('Oldest') }}</a></li>
-                        <li><a  ng-click="orderBy('-updated_at')" href="#" data-toggle="modal">{{ _('Recently updated') }}</a></li>
-
-                      </ul>
-                </div>
-
-              </div>
-              <br>
-                <br>
-              
-            </div>
-              <div class="row tasksList">
-                <div class="col-md-12">
-                    <ul class="list-group">
-                        <li class="task-actions list-group-item task-actions">
-                         <div class="row">
-                         <div class="col-md-12">
-                           <form id="task_actions" class="form-inline" role="form">
-                           <div class="row">
-                           <label class="col-md-1 col-sm-1">
-                               <input type="checkbox" ng-checked="isSelectedAll" ng-click="select_all_tasks($event)">  
-                           </label>
-                           <div class="col-md-5">
-                            <button  class="btn btn-default task_action" ng-click="beforecloseTask()" ng-class="{disabled: selected_tasks.length==0}">Close</button>
-                            <button ng-click="showAssigneeTags()" class="btn btn-default task_action" ng-class="{disabled: selected_tasks.length==0}">Tags
-                            <i class="fa fa-tags"></i>
-                            </button>
-                            <button ng-click="assigneeModal()" class="btn btn-default task_action" ng-class="{disabled: selected_tasks.length==0}">Assignee</button>
-                            </div>
-                          </form>
-                            </div>
-                        </div>
-                      </li>
-                       <li ng-repeat="task in tasks" class="list-group-item">
-                         <div class="row">
-                            <label class="col-md-2 col-sm-2">
-                                <input type="checkbox" ng-click="select_task(task,$index,$event)" ng-checked="isSelected()">  
-                                <span class="badge badge-important">
-                                  2
-                                </span>
-                           </label>
-                           <h4 class="col-md-5 col-sm-6 list-group-item-heading"
-                           ng-class= "{task_closed: task.status=='closed'}">
-                            <%= task.title %>
-                           </h4>
-                            <div class="col-md-5 col-sm-4">
-                                <span ng-repeat="task_tag in task.tags" class="pull-right task-label label" style="background-color: <%=task_tag.color%>;color:<%=idealTextColor(task_tag.color)%>;">
-                                    <%= task_tag.name %>
-                                </span>
-                            </div>
-                        </div>
-                         <div class="row">
-                          <p class="col-md-11 col-md-offset-1 list-group-item-text">
-                             <span>Opened by:<a href="#"> <%= task.author.display_name %></a></span>
-                             <!--<span>Closed by:<a href="#">Transline</a></span>-->
-                          </p>
-                          </div>
-                      </li>
-                    </ul>
-                  </div><!-- / col-md-12-->
-              </div> <!-- / tasksList-->
           </div>
           <script type="text/javascript">
               $('#slimtest1').slimScroll({
@@ -330,12 +327,21 @@
                 </div>
                 <div class="portlet-body">
                 <ul class="list-group tags-list">
-                  <li ng-repeat="tag_item in tags" class="list-group-item" ng-click="select_tag(tag_item,$index,$event)">
+                  <li ng-repeat="tag_item in tags" class="list-group-item tags-list-item" ng-click="selectTag(tag_item,$index,$event)">
+                  <div class="row">
                     <div class="tag-color" style="border-left: 4px solid <%=tag_item.color%>;">
                     </div>
-                    <span class="with-color"><%= tag_item.name %></span>
+                    <span class="with-color" ng-dblclick="editTag(tag_item)" ng-show="(tag_item!=edited_tag)||(!manage_tags)"><%= tag_item.name %></span>
+                    <form ng-submit="doneEditTag(tag_item)" ng-show="(tag_item==edited_tag)&&(manage_tags)">
+                      <input ng-blur="doneEditTag(tag_item)" type="text" class="col-md-offset-1 col-md-7 form-control inlineEditTag " ng-model="tag_item.name">
+                    </form>
+                    <button ng-click="deleteTag(tag_item)" class="close_tag close pull-right" ng-show="manage_tags"></button>
                   </li>
+                  </div>
                 </ul>
+                <div class="form-group">
+                  <button class="btn btn-default btn-block" ng-click="manage_tags=!manage_tags;manage()"> Manage Tags</button>
+                </div>
                 <form class="well" role="form">
                 <div class="row">
                   <div class="col-md-12 form-group">
