--- a/templates/base.html
+++ b/templates/base.html
@@ -348,6 +348,7 @@
   <script src="static/app/scripts/controllers/livecontrollers/productvideoscontrollers.js" ></script>
   <script src="static/app/scripts/controllers/livecontrollers/customerstoriescontrollers.js" ></script>
    <script src="static/app/scripts/controllers/livecontrollers/feedbackscontrollers.js" ></script>
+   <script src="static/app/scripts/controllers/documentcontrollers.js"></script> 
   <script src="static/app/scripts/controllers/notecontrollers.js"></script> 
   <script src="static/app/scripts/controllers/taskcontrollers.js"></script>
   <script src="static/app/scripts/controllers/eventcontrollers.js"></script>
