working on tasks.insert new api

--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -583,7 +583,7 @@
                                                     <datetimepicker data-ng-model="task.due"
                                                     data-datetimepicker-config="{ startView:'day', minView:'day' }" />
                                                   </center>
-        f             </div>
+                    </div>
             </div>
             <div class="modal-footer">
               <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
